--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YoYoIq">
         <activity
-            android:name=".CreateTeamActvity"
+            android:name=".CreateTeamActivity"
             android:exported="false" />
         <activity
             android:name=".PrivacyPolicy.AboutUsActivity"
