--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
 }
-
 android {
     compileSdk 32
 
@@ -48,4 +47,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.razorpay:checkout:1.6.20'
 }
