--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.yoyoiq">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -15,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YoYoIq">
+        android:theme="@style/Theme.YoYoIq"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".CreateTeamActivity"
             android:exported="false" />
