code commited all pending task

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,11 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
+        maven { url "https://jitpack.io" }
     }
 }
 rootProject.name = "YoYo Iq"
