--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,12 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        google()
+        jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
+        maven { url "https://jitpack.io" }
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
