--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.3'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'com.github.Drjacky:ImagePicker:2.1.14'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
