main/AndroidManifest.xml.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.YoYoIq"
         android:usesCleartextTraffic="true">
@@ -63,7 +64,7 @@
             android:exported="true" />
         <activity
             android:name=".SearchActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -111,19 +112,19 @@
             android:exported="true" />
         <activity
             android:name=".AddCashActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".MyCoupons"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".FantasyIPL"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".PointSystem"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="false" />
 
         <service
             android:name=".ChatFirebase.MessagingService"
@@ -132,9 +133,10 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <service
             android:name=".Notification"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
