--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'com.github.Drjacky:ImagePicker:2.1.14'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'com.shreyaspatil:EasyUpiPayment:2.0'
 }
