--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.github.Drjacky:ImagePicker:2.1.14'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.shreyaspatil:EasyUpiPayment:2.0'
+    implementation 'com.android.volley:volley:1.2.1'
 }
