--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.yoyoiq"
+        applicationId "com.example.forever11"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -25,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -41,6 +44,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.firebase:firebase-messaging:23.0.6'
     implementation 'com.google.firebase:firebase-dynamic-links:21.0.1'
+    implementation 'androidx.navigation:navigation-fragment:2.5.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -63,6 +68,4 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'com.github.Drjacky:ImagePicker:2.1.14'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-    implementation 'com.shreyaspatil:EasyUpiPayment:2.0'
-    implementation 'com.android.volley:volley:1.2.1'
 }
