--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/forever_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/forever_logo"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.YoYoIq"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".InSideAddCashLeaderboard.WhenLiveTeamPreview"
-            android:exported="false" />
-        <activity
-            android:name=".UpdatePassword.ChangePasswordActivity"
-            android:exported="false" />
-        <activity
-            android:name=".WalletPackage.UPIActivity"
-            android:exported="false" />
         <activity
             android:name=".LeaderboardActivity"
             android:exported="false" />
@@ -73,7 +64,7 @@
             android:exported="true" />
         <activity
             android:name=".SearchActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -121,19 +112,19 @@
             android:exported="true" />
         <activity
             android:name=".AddCashActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MyCoupons"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FantasyIPL"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PointSystem"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" />
 
         <service
             android:name=".ChatFirebase.MessagingService"
@@ -144,7 +135,7 @@
         </service>
         <service
             android:name=".Notification"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
